@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-05-19 [B] Add PHP 5.3 support to debugger {Nibbler}
 2009-05-01 [M] Updated version count from cpg1.4.22 to cpg1.4.23 in subversion repository as a preparation for a possible future release {GauGau}
 2009-04-30 [M] Release of cpg1.4.22 {GauGau}
 2009-04-29 [B] Fixed improper ban expirations due to time offset being incorrectly applied (thread ID 55464) {Paver}
